Remove emphasis and make texts shorter

--- a/couchbase-and-rails.tex
+++ b/couchbase-and-rails.tex
@@ -47,15 +47,13 @@
 \begin{frame}{Simple. Fast. Elastic.}
   \claim
     {Easy Scalability}
-    {Grow cluster without application changes, without downtime with a
-     single click}
+    {Grow cluster without application changes, without downtime}
 \end{frame}
 
 \begin{frame}{Simple. Fast. Elastic.}
   \claim
     {Consistent High Performance}
-    {Consistent sub-millisecond read and write response times with
-     consistent high throughput}
+    {Sub-millisecond read/write response \& high throughput}
 \end{frame}
 
 \begin{frame}{Simple. Fast. Elastic.}
