--- a/couchbase-and-rails.tex
+++ b/couchbase-and-rails.tex
@@ -49,24 +49,28 @@
     {Easy Scalability}
     {Grow cluster without application changes, without downtime}
 \end{frame}
+\fullpageimage{images/scalable.jpg}
 
 \begin{frame}{Simple. Fast. Elastic.}
   \claim
     {Consistent High Performance}
     {Sub-millisecond read/write response \& high throughput}
 \end{frame}
+\fullpageimage{images/fast.jpg}
 
 \begin{frame}{Simple. Fast. Elastic.}
   \claim
     {Always On 24x365}
     {No downtime for software upgrades, hardware maintenance, etc}
 \end{frame}
+\fullpageimage{images/always_on.jpg}
 
 \begin{frame}{Simple. Fast. Elastic.}
   \claim
     {Flexible Data Model}
     {JSON document model with no fixed schema}
 \end{frame}
+\fullpageimage{images/flexible.jpg}
 
 \section{gem i couchbase}
 \begin{frame}[fragile]{Basic K/V Operations}
