Add diagrams for map/reduce

--- a/beamerthemecouchbase.sty
+++ b/beamerthemecouchbase.sty
@@ -10,12 +10,14 @@
 \setbeamerfont{structure}{series={\bfseries}}
 \setbeamertemplate{items}[circle]
 \setbeamerfont{itemize/enumerate body}{size=\large}
+\setbeamerfont{alerted text}{series=\bfseries}
 
 % Colors
 \setbeamercolor{titlelike}{fg=white}
 \setbeamercolor{author}{fg=white}
 \setbeamercolor*{structure}{fg=black}
 
+\setbeamercolor{alerted text}{fg=red}
 
 % Templates
 \defbeamertemplate*{title page}{couchbase}[1][]
