--- a/couchbase-and-rails.tex
+++ b/couchbase-and-rails.tex
@@ -1,6 +1,6 @@
 % vim:et:ts=2:sw=2:ft=tex:
-%\documentclass[aspectratio=43]{beamer}
-\documentclass[aspectratio=43,handout]{beamer}
+\documentclass[aspectratio=43]{beamer}
+%\documentclass[aspectratio=43,handout]{beamer}
 \usepackage{cmap}
 
 \usepackage{graphicx,epstopdf}
@@ -13,6 +13,10 @@
 \defaultfontfeatures{Ligatures=TeX}
 \usepackage[english]{babel}
 \usepackage{hyperref}
+
+\usepackage{tikz}
+\usepackage{verbatim}
+\usetikzlibrary{arrows, shapes, chains}
 
 \usefonttheme{professionalfonts}
 \usetheme{couchbase}
@@ -149,6 +153,124 @@
   \end{verbatim}
 \end{frame}
 
+
+\tikzstyle{doc} = [
+  rectangle,
+  on chain,
+  on grid,
+  draw,
+  font=\ttfamily,
+  align=left,
+  inner xsep=1ex,
+  text width=12em,
+]
+
+\tikzstyle{ndoc} = [
+  doc,
+  text width=7em,
+]
+\tikzstyle{code} = [
+  on chain,
+  on grid,
+  font=\ttfamily,
+]
+\tikzstyle{dim} = [gray!20]
+\tikzstyle{hide} = [white]
+
+\tikzset{onslide/.code args={<#1>#2}{
+  \only<#1>{\pgfkeysalso{#2}}
+}}
+
+
+\begin{frame}[fragile]{Views: How It Works: Map}
+  \begin{tikzpicture}[
+      >=latex,
+      start chain=going below,
+      node distance=1mm and 60mm,
+      every join/.style={white},
+      thick,
+      auto
+    ]
+    \node[doc]                          (b1) {\{"type":"beer",...\}};
+    \node[doc, onslide=<2->{dim}, join]      {\{"type":"brewery",...\}};
+    \node[doc, join]                    (b2) {\{"type":"beer",...\}};
+    \node[doc, onslide=<2->{dim}, join] (c)  {\{"type":"brewery",...\}};
+    \node[doc, onslide=<2->{dim}, join]      {\{"type":"brewery",...\}};
+    \node[doc, join]                    (b3) {\{"type":"beer",...\}};
+    \node[doc, join]                    (b4) {\{"type":"beer",...\}};
+
+    \node[code, right=of c, onslide=<1>{hide}] (f) {emit(doc.category, doc.abv)};
+
+
+    \path[->, onslide=<1>{hide}] (b1.east) edge (f);
+    \path[->, onslide=<1>{hide}] (b2.east) edge (f);
+    \path[->, onslide=<1>{hide}] (b3.east) edge (f);
+    \path[->, onslide=<1>{hide}] (b4.east) edge (f);
+  \end{tikzpicture}
+\end{frame}
+
+\begin{frame}[fragile]{Views: How It Works: Reduce}
+  \begin{tikzpicture}[
+      >=latex,
+      start chain=going below,
+      node distance=1mm and 60mm,
+      every join/.style={white},
+      thick,
+      auto
+    ]
+
+    \node[doc]        (r1)  {["German Ale", 5.2]};
+    \node[doc, join]  (r2)  {["German Ale", 5.7]};
+    \node[doc, join]  (r3)  {["German Lager", 6.3]};
+    \node[doc, join]  (r4)  {["German Lager", 6.0]};
+    \node[doc, join]  (r5)  {["German Lager", 6.2]};
+    \node[doc, join]  (r6)  {["German Lager", 6.4]};
+    \node[doc, join]  (r7)  {["Irish Ale", 5.8]};
+    \node[doc, join]  (r8)  {["Irish Ale", 6.1]};
+    \node[doc, join]  (r9)  {["Irish Ale", 5.1]};
+
+    \node[code, right=of r5, onslide=<-1>{hide}] (f) {reduce(keys, values, false)};
+    \path[->, onslide=<1-2>{hide}] (f) edge (f);
+
+    \path[->, onslide=<1>{hide}] (r1.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r2.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r3.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r4.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r5.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r6.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r7.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r8.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r9.east) edge (f);
+
+    % hack
+  \end{tikzpicture}
+\end{frame}
+
+
+
+\begin{frame}[fragile]{Views: How It Works: Rereduce}
+  \begin{tikzpicture}[
+      >=latex,
+      start chain=going below,
+      node distance=1mm and 60mm,
+      every join/.style={white},
+      thick,
+      auto
+    ]
+
+    \node[ndoc] (r1){\{"count": 4, "sum": 23.2, "avg": 5.8 \}};
+    \node[ndoc, join] (r2){\{"count": 3, "sum": 18.4, "avg": 6.13\}};
+    \node[ndoc, join] (r3){\{"count": 2, "sum": 11.2, "avg": 5.6\}};
+
+    \node[code, right=of r2, onslide=<1>{hide}] (f) {reduce(null, values, true)};
+    \path[->, onslide=<1-2>{hide}] (f) edge (f);
+
+    \path[->, onslide=<1>{hide}] (r1.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r2.east) edge (f);
+    \path[->, onslide=<1>{hide}] (r3.east) edge (f);
+  \end{tikzpicture}
+\end{frame}
+
 \begin{frame}[fragile]{Views: Generator}
   \begin{verbatim}
   $ rails generate couchbase:view beer avg_by_category
@@ -168,22 +290,22 @@
 \end{frame}
 
 \begin{frame}[fragile]{Views: Reduce}
-  \begin{verbatim}
-  function (keys, values, rereduce) {
-    var ret = {sum: 0, count: 0};
-    if (rereduce) {
-      for (var i = 0; i < values.length; ++i) {
+  \begin{semiverbatim}
+  function (keys, values, rereduce) \{
+    var ret = \{sum: 0, count: 0\};
+    if (\alert<2,3>{rereduce}) \{
+      \alert<3>{for (var i = 0; i < values.length; ++i) \{
         ret.sum += values[i].sum;
         ret.count += values[i].count;
-      }
-    } else {
-      ret.sum = sum(values);
-      ret.count = values.length;
-    }
+      \}}
+    \} else \{
+      \alert<2>{ret.sum = sum(values);
+      ret.count = values.length;}
+    \}
     ret.avg = ret.sum / ret.count;
     return ret;
-  }
-  \end{verbatim}
+  \}
+  \end{semiverbatim}
 \end{frame}
 
 \begin{frame}[fragile]{Views: Model}
@@ -200,21 +322,21 @@
 \end{frame}
 
 \begin{frame}[fragile]{Views: Execution}
-  \begin{verbatim}
+  \begin{semiverbatim}
  001:0> Beer.avg_by_category.each do |beer|
- 002:1*   printf("%s: %.2f\n", beer.key, beer.value["avg"])
+ 002:1*   printf("\alert<2>{\%s}: \alert<3>{\%.2f}\\n", \alert<2>{beer.key}, \alert<3>{beer.value["avg"]})
  003:1> end
- Belgian and French Ale: 7.39
- British Ale: 6.93
- German Ale: 5.67
- German Lager: 6.22
- Irish Ale: 5.94
- North American Ale: 6.79
- North American Lager: 4.97
- Other Lager: 4.55
- Other Style: 5.82
+ \alert<2>{Belgian and French Ale}: \alert<3>{7.39}
+ \alert<2>{British Ale}: \alert<3>{6.93}
+ \alert<2>{German Ale}: \alert<3>{5.67}
+ \alert<2>{German Lager}: \alert<3>{6.22}
+ \alert<2>{Irish Ale}: \alert<3>{5.94}
+ \alert<2>{North American Ale}: \alert<3>{6.79}
+ \alert<2>{North American Lager}: \alert<3>{4.97}
+ \alert<2>{Other Lager}: \alert<3>{4.55}
+ \alert<2>{Other Style}: \alert<3>{5.82}
  nil
-  \end{verbatim}
+  \end{semiverbatim}
 \end{frame}
 
 \begin{frame}[fragile]{Links}
@@ -231,6 +353,7 @@
 \end{frame}
 
 \section{And Even More}
+\fullpageimage{images/more.jpg}
 \begin{frame}[fragile]{Geospatial Views}
   \begin{center}
     {\Huge\bfseries Query your geo data}
