Expand geospatial slide. Put URL to slides

--- a/beamerthemecouchbase.sty
+++ b/beamerthemecouchbase.sty
@@ -95,7 +95,7 @@
   \normalback
 }
 
-\def\thanks
+\newcommand{\thanksAndQuestions}[1]
 {
   \sectionback
   \begin{frame}
@@ -108,6 +108,7 @@
         Questions?
       \end{center}
       \vskip2em
+      {\large #1}
     \end{beamercolorbox}
   \end{frame}
   \normalback
